force-app/main/default/objects/CCR_DeviceEligibilityCalculationDate__mdt/CCR_DeviceEligibilityCalculationDate__mdt.object-meta.xml
<CustomObject>
    <description>Used By : CCR
Description : to store the information of Device Eligibility calculation date from channel ISOBAR</description>
    <label>Device Eligibility Calculation Date</label>
    <pluralLabel>CCR_DeviceEligibilityCalculationDate</pluralLabel>
</CustomObject>