force-app/main/default/objects/CCR_DeviceEligibilityCalculationDate__mdt/fields/CCR_Channel__c.field-meta.xml
<CustomField>
    <fullName>CCR_Channel__c</fullName>
    <description>Used By : CCR
Description : to store channel for qure</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISOBAR</fullName>
                <default>true</default>
                <label>ISOBAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>