force-app/main/default/objects/CCR_DeviceEligibilityCalculationDate__mdt/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>Used By : CCR
Description : to store country value which is used in Device Calculation date</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <default>true</default>
                <label>FR</label>
            </value>
            <value>
                <fullName>KR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>