force-app/main/default/objects/CCR_DeviceEligibilityCalculationDate__mdt/fields/CCR_DeviceEligibleDays__c.field-meta.xml
<CustomField>
    <fullName>CCR_DeviceEligibleDays__c</fullName>
    <description>Used By : CCR
Description : to store the value of Device voucher date</description>
    <label>Device Eligible Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>